[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# do this python pin to avoid issue already
# fixed on maintenance branch
# https://github.com/scipy/scipy/issues/19513
python =">=3.9,<3.13"
scipy = "^1.10.0"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
