[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python =">=3.9,<3.12"
numpy = "^1.23.4"
scipy = { path = "/home/treddy/github_projects/scipy", develop = false}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
